feat: Add new font family to the site

--- a/styles.css
+++ b/styles.css
@@ -39,3 +39,9 @@ section {
 figcaption {
     text-align: center;
 }
+body {
+    font-family: "Josefin Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 300;
+    font-style: normal;
+  }
