--- a/recipes/recipe.css
+++ b/recipes/recipe.css
@@ -9,13 +9,15 @@
     height: 400px;
     margin-left: auto;
     margin-right: auto;
+    overflow: hidden;
+    border-radius: 10%;
     
 }
 .image-wrapper img {
     width: 600px;
     height: 400px;
     object-fit: contain;
-    border-radius: 20px;
+    
 }
 .image-caption {
     text-align: center;
@@ -25,3 +27,10 @@
     margin-left: auto;
     margin-right: auto;
 }
+
+body {
+    font-family: "Josefin Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 300;
+    font-style: normal;
+  }
