change background and header colors of all pages

--- a/recipes/recipe.css
+++ b/recipes/recipe.css
@@ -17,7 +17,6 @@
     width: 600px;
     height: 400px;
     object-fit: contain;
-    
 }
 .image-caption {
     text-align: center;
@@ -33,4 +32,8 @@ body {
     font-optical-sizing: auto;
     font-weight: 300;
     font-style: normal;
+    background-color: antiquewhite;
+  }
+  h1, h3 {
+    color: brown
   }
